fix alignment if no header image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ p > a:focus, p > a:hover
 }
 
 .main-content-head {
-	
+	margin-top: 80px;
 }
 
 main {
